# is-majsoul-fair

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json  post-create.sh
src/: CMakeLists.txt  fair_paishan.cpp  fair_shanten_distribution.cpp  paishan.cpp  paishan_to_binary.cpp  paishan_to_entropy.cpp  parse_game_records.cpp  shanten.cpp  unbiased_paishan.cpp
src/common/: mahjongsoul.proto  throw.cpp  throw.hpp  type_name.cpp  type_name.hpp
src/core/: covering_binary_interval.cpp  covering_binary_interval.hpp  fair_paishan.cpp  fair_paishan.hpp  integer.cpp  integer.hpp  interval.cpp  interval.hpp  interval_to_binary.cpp  interval_to_binary.hpp  interval_to_entropy.cpp  interval_to_entropy.hpp  paishan_reader.cpp  paishan_reader.hpp  permutation_to_interval.cpp  permutation_to_interval.hpp
src/original/: CMakeLists.txt  chi_square_1.cpp  chi_square_2.cpp
